syntax = "proto3";

import "grpc/registry/v1alpha1/patch.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.anemos.metastore.v1alpha1";
option java_outer_classname = "RegistryP";

package grpc.registry.v1alpha1;

service Registry {
    rpc GetSchema (GetSchemaRequest) returns (GetSchemaResponse);
    rpc VerifySchema (SubmitSchemaRequest) returns (SubmitSchemaResponse);
    rpc SubmitSchema (SubmitSchemaRequest) returns (SubmitSchemaResponse);
}

message SubmitSchemaRequest {

    // Information of this schema changes.
    message Comment {
        string name = 1;
        string email = 2;
        string description = 3;
    }

    message FileGroup {
        repeated string file_name = 1;
    }

    // How a scoped submit will be merged into the existing registry.
    enum MergeStrategy {
        MERGE = 0;
        REPLACE = 1;
        CLEAR = 2;
    }

    // Represents the schema registry names. If a schema registry doesn't support multiple
    // registries this field is ignored. The default value represents the default registry.
    string registry_name = 1;

    // These are proto2 type google.protobuf.FileDescriptorProto, but
    // we avoid taking a dependency on descriptor.proto, which uses
    // proto2 only features, by making them opaque
    // bytes instead
    repeated bytes file_descriptor_proto = 2;

    MergeStrategy merge_strategy = 9;

    oneof entity_scope {
        string package_name = 3;
        string package_prefix = 4;
        string file_name = 5;
        FileGroup file_group = 8;
    }

    string validation_profile = 6;
    Comment comment = 7;
}

message SubmitSchemaResponse {
    string schema_profile = 1;
    Report report = 2;
    int32 error_code = 3;
}

message GetSchemaRequest {
    // Represents the schema registry names. If a schema registry doesn't support multiple
    // registries this field is ignored. The default value represents the default registry.
    string registry_name = 1;

    oneof entity_scope {
        string linked_resource = 2;
        string package_name = 3;
        string package_prefix = 4;
        string file_name = 5;
        string message_name = 6;
        string service_name = 7;
        string enum_name = 8;
    }
    bool transitive = 9;
}

message GetSchemaResponse {
    // These are proto2 type google.protobuf.FileDescriptorProto, but
    // we avoid taking a dependency on descriptor.proto, which uses
    // proto2 only features, by making them opaque
    // bytes instead
    repeated bytes file_descriptor_proto = 1;
    int32 error_code = 2;
}
